# ancient_ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
ancient_ml/: __init__.py  __main__.py  backtest.py  baselines.py  config_loader.py  data.py  feature_builder.py  inspect_data.py  lotto_mapping.py  predictor.py  registry.py  scoring.py  searcher.py  trainer.py  vedic_engine.py
configs/: default.json
data/: 649.csv  649_200.csv  649_sample.csv  draws_example.csv
tests/: test_data.py
