[project]
name = "ancient-ml"
version = "0.1.0"
description = "Synthetic Vedic Oracle Kundli search and ML ranking framework for Lotto 6/49 experiments."
requires-python = ">=3.10"
dependencies = [
    "pyswisseph>=2.10.3.2",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
